Desenvolvimento do histórico de previsões.

--- a/MauiTempoAgora/MainPage.xaml
+++ b/MauiTempoAgora/MainPage.xaml
@@ -23,7 +23,29 @@
                           IsPullToRefreshEnabled="True"
                           Refreshing="lst_historico_Refreshing"
                           ItemSelected="lst_historico_ItemSelected">
-                    
+                    <ListView.Header>
+                        <Grid ColumnDefinitions="100, 100, 100, 100, 100"
+                              BackgroundColor="{StaticResource Gray100}">
+                            <Label Grid.Column="0" Text="🏙 Cidade" FontAttributes="Bold"/>
+                            <Label Grid.Column="1" Text="📅 Data" FontAttributes="Bold"/>
+                            <Label Grid.Column="2" Text="🌥 Previsão" FontAttributes="Bold"/>
+                            <Label Grid.Column="3" Text="🌡 Máxima" FontAttributes="Bold"/>
+                            <Label Grid.Column="4" Text="🌡 Mínima" FontAttributes="Bold"/>
+                        </Grid>
+                    </ListView.Header>
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <ViewCell>
+                                <Grid ColumnDefinitions="100, 100, 100, 100, 100">
+                                    <Label Grid.Column="0" Text="{Binding cidade}"/>
+                                    <Label Grid.Column="1" Text="{Binding data}"/>
+                                    <Label Grid.Column="2" Text="{Binding description}"/>
+                                    <Label Grid.Column="3" Text="{Binding tempmax}"/>
+                                    <Label Grid.Column="4" Text="{Binding tempmin}"/>
+                                </Grid>
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
                 </ListView>
             </StackLayout>
 
