--- a/MauiTempoAgora/MainPage.xaml
+++ b/MauiTempoAgora/MainPage.xaml
@@ -24,26 +24,30 @@
                           Refreshing="lst_historico_Refreshing"
                           ItemSelected="lst_historico_ItemSelected">
                     <ListView.Header>
-                        <Grid ColumnDefinitions="*, *, *, *, *, *"
+                        <Grid ColumnDefinitions="*, *, *, *, *, *, *, *"
                               BackgroundColor="{StaticResource Gray100}">
                             <Label Grid.Column="0" Text="Id" FontAttributes="Bold"/>
-                            <Label Grid.Column="1" Text="🏙 Cidade" FontAttributes="Bold"/>
-                            <Label Grid.Column="2" Text="📅 Data" FontAttributes="Bold"/>
-                            <Label Grid.Column="3" Text="🌥 Previsão" FontAttributes="Bold"/>
-                            <Label Grid.Column="4" Text="🌡 Máxima" FontAttributes="Bold"/>
-                            <Label Grid.Column="5" Text="🌡 Mínima" FontAttributes="Bold"/>
+                            <Label Grid.Column="1" Text="Cidade" FontAttributes="Bold"/>
+                            <Label Grid.Column="2" Text="Data" FontAttributes="Bold"/>
+                            <Label Grid.Column="3" Text="Previsão" FontAttributes="Bold"/>
+                            <Label Grid.Column="4" Text="Temperatura Máxima" FontAttributes="Bold"/>
+                            <Label Grid.Column="5" Text="Temperatura Mínima" FontAttributes="Bold"/>
+                            <Label Grid.Column="6" Text="Nascer do Sol" FontAttributes="Bold"/>
+                            <Label Grid.Column="7" Text="Pôr do Sol" FontAttributes="Bold"/>
                         </Grid>
                     </ListView.Header>
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <ViewCell>
-                                <Grid ColumnDefinitions="*, *, *, *, *, *">
+                                <Grid ColumnDefinitions="*, *, *, *, *, *, *, *">
                                     <Label Grid.Column="0" Text="{Binding Id}"/>
                                     <Label Grid.Column="1" Text="{Binding cidade}"/>
                                     <Label Grid.Column="2" Text="{Binding data}"/>
                                     <Label Grid.Column="3" Text="{Binding description}"/>
                                     <Label Grid.Column="4" Text="{Binding tempmax}"/>
                                     <Label Grid.Column="5" Text="{Binding tempmin}"/>
+                                    <Label Grid.Column="6" Text="{Binding sunrise}"/>
+                                    <Label Grid.Column="7" Text="{Binding sunset}"/>
                                 </Grid>
                             </ViewCell>
                         </DataTemplate>
